[package]
name = "google_taxonomy"
description = "Enum with all Google Product Categories / Taxonomy"
version = "0.1.0"
license = "MIT"
edition = "2018"
authors = ["Jacob Magnusson <m@jacobian.se>"]
repository = "https://github.com/jmagnusson/google_taxonomy"
documentation = "https://docs.rs/google_taxonomy/"
homepage = "https://github.com/jmagnusson/google_taxonomy"
readme = "README.md"
keywords = ["google", "taxonomy"]

[features]
default = []
with-serde = ["serde"]

[dependencies]
serde = { version = "1.0.127", optional = true, features = ["derive"] }

[dev-dependencies]
doc-comment = "0.3.3"
serde_json = "1.0.66"
