[package]
name = "google_taxonomy"
description = "Struct with all Google Product Categories / Taxonomy"
version = "0.3.0"
license = "MIT"
edition = "2018"
authors = ["Jacob Magnusson <m@jacobian.se>"]
repository = "https://github.com/jmagnusson/google-taxonomy"
documentation = "https://docs.rs/google_taxonomy/"
homepage = "https://github.com/jmagnusson/google-taxonomy"
readme = "README.md"
keywords = ["google", "taxonomy"]

[features]
default = []

[dependencies]
serde = { version = "1.0.127", optional = true, features = ["derive"] }

[dev-dependencies]
doc-comment = "0.3.3"
serde_json = "1.0.66"
