[package]
name = "google_taxonomy"
description = "Struct with all Google Product Categories / Taxonomy"
version = "0.3.2"
license = "MIT"
edition = "2018"
authors = ["Jacob Magnusson <m@jacobian.se>"]
repository = "https://github.com/jmagnusson/google-taxonomy"
documentation = "https://docs.rs/google_taxonomy/"
homepage = "https://github.com/jmagnusson/google-taxonomy"
readme = "README.md"
keywords = ["google", "taxonomy"]

[features]
default = []

[dependencies]
serde = { version = "1.0.127", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.66"
